--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@ display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; obje
 <audio id="screamSound" src="bomba.mp3"></audio>
 <script>
 function surprise() {
-  const img = document.getElementById("scream");
-  const sound = document.getElementById("screamSound");
-  img.style.display = "block";
-  sound.play();
   setTimeout(() => {
-    img.style.display = "none";
-  }, 1000);
+    const img = document.getElementById("scream");
+    const sound = document.getElementById("screamSound");
+    img.style.display = "block";
+    sound.play();
+    setTimeout(() => {
+      img.style.display = "none";
+    }, 1000);
+  }, 2000);
 }
 </script>
 </body>
